--- a/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-01-one-to-one-uni
+spring.datasource.username=root
+spring.datasource.password=test
+
+# turn off springboot banner
+spring.main.banner-mode=off
+
+# reduce logging level. set logging level to warn
+logging.level.root=warn
 
