--- a/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.main.banner-mode=off
 # reduce logging level. set logging level to warn
 logging.level.root=warn
 
+# Show JPA/Hibernate logging messages
+logging.level.org.hibernate.SQL=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
