--- a/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hb-01-one-to-one-uni
+spring.datasource.url=jdbc:mysql://localhost:3306/hb-03-one-to-many
 spring.datasource.username=root
 spring.datasource.password=test
 
@@ -11,4 +11,5 @@ logging.level.root=warn
 # Show JPA/Hibernate logging messages
 logging.level.org.hibernate.SQL=trace
 logging.level.org.hibernate.orm.jdbc.bind=trace
+
 
